--- a/index.html
+++ b/index.html
@@ -2,16 +2,24 @@
 <html>
 <head>
     <title>NSS Ping Pong Scoreboard</title>
-    <link href="https://fonts.googleapis.com/css?family=Play:400,700|Press+Start+2P" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body ng-app='PingApp'>
+<body ng-app="PingApp">
 
-    <div ng-controller="TopCtrl">
         <div ng-view></div>
-    </div>
+
+    <!-- Third Party Libraries -->
+    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 
     <script type="text/javascript" src="app/app.js"></script>
+
+    <!-- Controllers -->
+    <script type="text/javascript" src="app/controllers/HomeCtrl.js"></script>
+    <script type="text/javascript" src="app/controllers/LoginCtrl.js"></script>
+
+    <!-- Factories -->
 </body>
 </html>
