--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <script type="text/javascript" src="app/controllers/LoginCtrl.js"></script>
 
     <!-- Factories -->
+    <script type="text/javascript" src="app/factories/DataFactory.js"></script>
 </body>
 </html>
