--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>NSS Ping Pong Scoreboard</title>
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body ng-app="PingApp">
