--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="dist/css/style.css">
 </head>
 <body ng-app="PingApp">
+        <h1>Here's a test!. It should be a weird color</h1>
+        <div ng-include="'partials/navbar.html'"></div>
 
         <div ng-view></div>
 
