Player detail view ready for graphing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" type="text/css" href="dist/css/style.css">
 </head>
 <body ng-app="PingApp">
-        <h1>Here's a test!. It should be a weird color</h1>
         <div ng-include="'partials/navbar.html'"></div>
 
         <div ng-view></div>
@@ -22,6 +21,7 @@
     <!-- Controllers -->
     <script type="text/javascript" src="app/controllers/HomeCtrl.js"></script>
     <script type="text/javascript" src="app/controllers/LoginCtrl.js"></script>
+    <script type="text/javascript" src="app/controllers/PlayerDetailCtrl.js"></script>
 
     <!-- Factories -->
     <script type="text/javascript" src="app/factories/DataFactory.js"></script>
