Buttons working to toggle forms

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <!-- Controllers -->
     <script type="text/javascript" src="app/controllers/TopCtrl.js"></script>
     <script type="text/javascript" src="app/controllers/HomeCtrl.js"></script>
+    <script type="text/javascript" src="app/controllers/GameReportCtrl.js"></script>
     <script type="text/javascript" src="app/controllers/LoginCtrl.js"></script>
     <script type="text/javascript" src="app/controllers/PlayerDetailCtrl.js"></script>
 
