--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script type="text/javascript" src="app/controllers/GameReportCtrl.js"></script>
     <script type="text/javascript" src="app/controllers/LoginCtrl.js"></script>
     <script type="text/javascript" src="app/controllers/PlayerDetailCtrl.js"></script>
+    <script type="text/javascript" src="app/controllers/NewPlayerCtrl.js"></script>
 
     <!-- Factories -->
     <script type="text/javascript" src="app/factories/DataFactory.js"></script>
